# firsh

./: Cargo.toml  README.md  exampleconf.toml  history.txt
src/: colors.rs  detect_env.rs  helper.rs  llama.rs  main.rs  ping.rs  struct.rs  versions.rs
