[package]
name = "shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.8.10"
termion = "3.0.0"
rustyline = {version= "13.0.0", features = ["derive"] }
libc = "0.2.153"
